Add concessions
