# src/models/concessions.model.ts
@@ -1,0 +1,12 @@
+import { ObjectId } from 'mongodb';
+
+import type { ConcessionCategory } from '../types/concessions.types';
+
+export interface Concession {
+  name: string;
+  description?: string;
+  category: ConcessionCategory;
+  priceInCents: number;
+  isActive: boolean;
+  _id?: ObjectId;
+}
