# src/routes/index.ts
@@ -6,6 +6,7 @@ import { movieRouter } from './movies.route';
 import { seatsRouter } from './seats.route';
 import { showtimeRouter } from './showtimes.route';
 import { ticketsRouter } from './tickets.route';
+import { concessionRouter } from './concessions.route';
 import { swaggerRouter } from './swagger.route';
 
 const routes = Router();
@@ -15,6 +16,7 @@ routes.use('/movies', movieRouter);
 routes.use('/seats', seatsRouter);
 routes.use('/showtimes', showtimeRouter);
 routes.use('/tickets', ticketsRouter);
+routes.use('/concessions', concessionRouter);
 routes.use('/', swaggerRouter);
 
 export default routes;
